--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -7,7 +7,7 @@
     <img src="{{ .Params.Image | absURL }}" alt=""
       class="img-fluid author-thumb-sm d-block mx-auto rounded-circle mb-4">
     {{ end }}
-    <p>{{ .Summary }}</p>
+    <p>{{ .Content }}</p>
     {{ end }}
   </div>
   <!-- category -->
